fix: change the favicon settings

--- a/config.yml
+++ b/config.yml
@@ -91,7 +91,10 @@ params:
         appendFilePath: true
 
     assets:
-        favicon: "/favicon.ico"
+        favicon: "/images/favicon.ico"
+        favicon16x16: "/images/favicon-16x16.png"
+        favicon32x32: "/images/favicon-32x32.png"
+        apple_touch_icon: "/images/apple-touch-icon.png"
 
     socialIcons:
         - name: github
